--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.26.4)
 
 project(Chess)
 
-
+file (GLOB source_files "src/headers/*.h")
 file (GLOB source_files "src/*.cpp")
+
 add_executable(${PROJECT_NAME} ${source_files})
