legal moves check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,9 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
