Graphics things (ft.memory leak and other bugs)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,8 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "any": "cpp"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
